--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h3>kujasdjkhjklasdkksl</h3>
-<hr>
-<app-servers></app-servers>
+
+<app-header></app-header>
+<div class="container">
+  <div class="row">
+    <div class="col-ms-12">
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
+    </div>
+  </div>
+</div>
